force-app/main/default/objects/Feedback__c/fields/IntentTolerance__c.field-meta.xml
<CustomField>
    <fullName>IntentTolerance__c</fullName>
    <label>Intent Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>