force-app/main/default/objects/Feedback__c/fields/ModelID__c.field-meta.xml
<CustomField>
    <fullName>ModelID__c</fullName>
    <label>Intent ModelID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>