force-app/main/default/objects/Feedback__c/fields/SentimentModelId__c.field-meta.xml
<CustomField>
    <fullName>SentimentModelId__c</fullName>
    <label>Sentiment Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>